src/compilador/Sintatico/Sintatico.java
/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package compilador.Sintatico;

import compilador.Lexico.Token;
import java.io.File;
import java.io.FileWriter;
import java.io.IOException;
import java.io.PrintWriter;
import java.util.Arrays;
import java.util.LinkedList;
import java.util.List;

/**
 *
 * @author Jhone e Matheus Castro
 */
public class Sintatico {
    private LinkedList<Token> tokens;
    private LinkedList<Erro> erros;
    private int atual;

    public Sintatico() {
        erros = new LinkedList<Erro>();
        tokens = new LinkedList<Token>();
    }
 
    public void start(LinkedList<Token> tokens, String nomeArq) throws IOException{   
        nomeArq = nomeArq.split(".txt")[0];
        atual=0;
        this.tokens.addAll(tokens);        
        //tirando os comentarios
        for(Token tok: tokens){
            if(tok.getTipo().equals("comentario"))
                this.tokens.remove(tok);
        }
        
        System.out.println("----------------- Analise Sintatica -----------------\n");
        programa();
        if (erros.isEmpty())
            System.out.println("Sucesso!");
        else{
            for(Erro error: erros){
                System.out.println("Esperava \""+error.getEsperado()+"\" mas obteve \""+error.getObtido()+"\" na linha: "+error.getLinha());               
            }
        }
        
        //gravar no txt
        File file = new File("saida/"+nomeArq+"_sintatico.txt");

        if (!file.exists()){
            new File("saida/"+nomeArq+"_sintatico.txt").createNewFile();
            file = new File("saida/"+nomeArq+"_sintatico.txt");
        }

        PrintWriter gravarArq = new PrintWriter(new FileWriter(file));
        if (erros.isEmpty())
            gravarArq.printf("Sucesso!%n");
        else{
            for(Erro error: erros){
                gravarArq.printf(error.getLinha()+" Esperava \""+error.getEsperado()+"\" mas obteve \""+error.getObtido()+"\"%n");
            }
        }
        gravarArq.close();
    }
    //vê o token atual
    private Token ver() throws EndTokensException{
        return verLLX(0);
    }
    //vê qualquer token que vósmicê quiseres
    private Token verLLX(int x) throws EndTokensException{
        if (atual + x >= tokens.size())
            throw new EndTokensException("final não esperado");// mudar tipo de excecao depois
        return tokens.get(atual + x);
    }
    //consome o token atual incrementando o valor de "atual"
    private void consumir(){
        atual++;
    }
    // modo panico
    // vai consumir ate o atual se tornar um token de sync passado por parametro
    private void sincronizar(String... syncC) throws EndTokensException{   
        List<String> sync = Arrays.asList(syncC);
    	while(!sync.contains(ver().getLexema()) && !sync.contains(ver().getTipo())){
    		System.out.println("Pulou Token: " + ver().getLexema());
    		consumir();
    	}
    }
    
    //super equals
    private boolean igual(String... s){
        String referencia = s[0];
        for(int i=1; i<s.length;i++){
            if (referencia.equals(s[i])){
                return true;
            }
        }            
        return false;
    }
    /////////////////////////    BAGACEIRA    //////////////////////////
    
    // var c | c
    private void programa(){
        variaveis();
        c();
    }
    
    // c programa | programa
    private void c(){
        constantes();
        p();        
    }
    
    // programa | programa funcoes 
    private void p(){
        //programa p
        try {
            if (ver().getLexema().equals("programa")){
                consumir();
                bloco();                
            }else{
                erros.add(new Erro("programa", ver()));
                sincronizar("inicio", ";", "sync1", "sync2", "sync3");//escolher tokens sync para programa
                //sincronizar leitura com token que vai para bloco
                if (ver().getLexema().equals("inicio")||ver().getLexema().equals(";")){//vericicar todos os tokens que vao pra bloco
                    bloco();                    
                }
                //sincronizar leitura com token que vai para funcao
                else if (ver().getLexema().equals("funcao")){
                    //deixa apssar para ir pra funcoes ali em baixo
                }
                
            }
        } catch (EndTokensException ex) {
            System.out.println(ex);
        }  
        funcoes();
    }
    
    // funcao funcoes | vazio
    private void funcoes(){
        try {
            System.out.println(ver().getLexema());// so pra checar se o arquivo acabou, se sim, dara a exception
            funcao_decl();// tratar fim de arquivo dentro desta tb, pois ai seria erro
            funcoes();
        } catch (EndTokensException ex) {
            //fim de arquivo
        }  
    }
    
    ////////////////////////    variaveis    /////////////////////////////
    
    // var inicio <varlist> fim
    private void variaveis(){
        try {
            if (ver().getLexema().equals("var")){//se nao tem var pula pra c()                
                consumir();//consome var
                if (ver().getLexema().equals("inicio")){
                    consumir();
                    if (!ver().getLexema().equals("fim")) // caso esteja vazio
                        varlist();// fica dentro do if mesmo, pq se der erro no else 
                                //escolho pra onde ir e nao obritoriamente ir pro proximo
                    else if (igual(ver().getLexema(),"programa", "const", "inicio")){
                        //nothing, deixar passar
                    }
                }else{
                    //panico pra caso nao tiver inicio
                    //aqui que será tomado a decisao de onde seguir apartir do token sincronizado
                    erros.add(new Erro("inicio", ver()));                    
                    sincronizar("inicio", ";", "inteiro", "real", "booleano", "caractere", "cadeia", "fim", "programa");
                    if (igual(ver().getLexema(), ";", "inteiro", "real", "booleano", "caractere", "cadeia"))
                        varlist();
                    else if(igual(ver().getLexema(), "inicio")){ 
                        consumir();
                        varlist();
                    }
                }                
                if (ver().getLexema().equals("fim")){
                    consumir();
                }else{
                    //panico pra caso nao tiver fim
                    erros.add(new Erro("fim", ver()));
                    sincronizar("fim", "programa", "const");     
                    if (igual(ver().getLexema(), "fim"))
                        consumir();
                    //deixa passar                    
                }
            } 
        } catch (EndTokensException ex) {
            System.out.println(ex);
        }
    }

    // <tipo> <R> <varlist> | <>
    private void varlist() throws EndTokensException {
        if (igual(ver().getLexema(),"fim","programa","inicio")){
            return;
        }
        if (isTipo()){
            consumir();
            R();
            varlist();
        }else{
            //panico -tipo
            erros.add(new Erro("tipo", ver()));                
            sincronizar(",",";", "fim", "programa", "inicio","const", "identificador");
            if (igual(ver().getLexema(), ";")){
                consumir();
                varlist(); 
            }else if (igual(ver().getLexema(), ",")){
                consumir();
                R(); 
            }else if (igual(ver().getTipo(), "identificador")){
                R();
            }
            // se for fim progrma ou const nao fazer nada, pois assim retorna pra variaveis e ela se vira
        } 
        
    }
    
    //id <vetor> <R2>
    private void R() throws EndTokensException {
        if (ver().getTipo().equals("identificador")){
//--------coletar ids antes de consumir em uma lista e verificar se ele ja existe, se sim é um erro semantico --------------------------semantico
//-----------------------------------------------------------------------------------------------------------------------------------------------
//-----------------------------------------------------------------------------------------------------------------------------------------------
            consumir();
            vetor();
            R2();
        }else{
            //panico pra falta de id
            erros.add(new Erro("identificador", ver()));
            sincronizar(",",";", "fim", "programa", "const");
            if (igual(ver().getLexema(), ";", ","))
                R2();
        }
    }
    //','<R> | ';'
    private void R2() throws EndTokensException{
        if(ver().getLexema().equals(",")){
            consumir();
            R();
        } else if(ver().getLexema().equals(";")){
            consumir();
        } else{
            //panico - ou ;        
            sincronizar(",", "identificador", ";", "fim", "programa", "const");
            if(igual(ver().getLexema(), "identificador", ","))
                erros.add(new Erro(",",ver()));
            else
                erros.add(new Erro(";", ver()));
            if (igual(ver().getLexema(), ";", ","))
                consumir();            
        }
    }
    //'<<<'<Exp_Aritmetica><vetor2>'>>>' | <>
    private void vetor() throws EndTokensException {
        if(ver().getLexema().equals("<<<")){
            consumir();
            exp_aritmetica(); // a fazer   
            vetor2();
            if(ver().getLexema().equals(">>>")){
                consumir();                
            }else{
                //panico
                erros.add(new Erro(">>>",ver()));
                sincronizar(">>>", ";");
                if(ver().getLexema().equals(">>>"))
                    consumir();
                //só
            }
        }
    }
    
    //','<Exp_Aritmetica><Vetor2> | <>
    private void vetor2() throws EndTokensException{
        if(ver().getLexema().equals(",")){
            consumir();
            exp_aritmetica();
            vetor2();
        }
    }
    
    ////////////////////////    constantes    /////////////////////////////
    
    //const inicio <constlist> fim
    private void constantes(){
        try {
            if (ver().getLexema().equals("const")){//se nao tem var pula pra c()                
                consumir();//consome var
                if (ver().getLexema().equals("inicio")){
                    consumir();
                    if (!ver().getLexema().equals("fim"))// se nao tiver vazio
                        constlist();// fica dentro do if mesmo, pq se der erro no else 
                                //escolho pra onde ir e nao obritoriamente ir pro proximo
                    else if (igual(ver().getLexema(),"programa","inicio")){
                        //nothing
                    }
                }else{
                    //panico pra caso nao tiver inicio
                    //aqui que será tomado a decisao de onde seguir apartir do token sincronizado
                    erros.add(new Erro("inicio",ver()));                    
                    sincronizar("inicio", ";", ",", "inteiro", "real", "booleano", "caractere", "cadeia", "fim", "programa");
                    if (igual(ver().getLexema(), ",", ";", "inteiro", "real", "booleano", "caractere", "cadeia"))
                        constlist();
                    else if(igual(ver().getLexema(), "inicio")){ 
                        consumir();
                        constlist();
                    }
                }                
                if (ver().getLexema().equals("fim")){
                    consumir();
                }else{
                    //panico pra caso nao tiver fim
                    erros.add(new Erro("fim",ver()));
                    sincronizar("fim", "programa", "inicio");     
                    if (igual(ver().getLexema(), "fim"))
                        consumir();
                    //deixa passar                    
                }
            } 
        } catch (EndTokensException ex) {
            System.out.println(ex);
        }
    }
    
    //<Tipo><Const_Decl><Constlist> | <>
    private void constlist() throws EndTokensException{
        if (igual(ver().getLexema(),"fim","programa","inicio")){
            return;
        }
        if (isTipo()){
            consumir();
            const_decl();
            constlist();
        }else{
            //panico -tipo
            erros.add(new Erro("tipo", ver()));
            sincronizar(",",";", "fim", "programa", "inicio", "identificador");
            if (igual(ver().getLexema(), ";")){
                consumir();
                constlist(); 
            }else if (igual(ver().getLexema(), ",")){
                consumir();
                const_decl(); 
            }else if (igual(ver().getTipo(), "identificador"))
                const_decl();
            // se for fim progrma ou const nao fazer nada, pois assim retorna pra variaveis e ela se vira
        }         
    }
    
    //id'<<'<Literal><Const_Decl2>
    private void const_decl() throws EndTokensException{
        if(ver().getTipo().equals("identificador")){
//--------coletar ids antes de consumir em uma lista e verificar se ele ja existe, se sim é um erro semantico --------------------------semantico
//-----------------------------------------------------------------------------------------------------------------------------------------------
//-----------------------------------------------------------------------------------------------------------------------------------------------

            consumir();  
            if(ver().getLexema().equals("<<")){
                consumir(); 
//--------passar o tipo consumido em const_list para esta funcao e comparar com o tipo do literal --------------------------------------semantico
//-----------------------------------------------------------------------------------------------------------------------------------------------
//-----------------------------------------------------------------------------------------------------------------------------------------------
                if(isLiteral()){
                    consumir();
                    const_decl2();
                }else{
                    //panico -valor literal
                    erros.add(new Erro("valor literal", ver()));
                    sincronizar(",", ";", "programa", "inicio", "fim");
                    if (igual(ver().getLexema(), ";", ","))
                        const_decl2();
                }
            }else{
                //panico -<<
                erros.add(new Erro("<<", ver()));
                sincronizar(",",";", "fim", "programa", "inicio", "caractere", "cadeia", "numero","verdadeiro", "falso");
                if (igual(ver().getLexema(), ";", ","))
                    const_decl2();
                else if (igual(ver().getLexema(),"verdadeiro", "falso")||igual(ver().getTipo(), "caractere", "cadeia", "numero")){
                    consumir();
                    const_decl2();
                }
            }            
        }else{
            //panico -id
            erros.add(new Erro("identificador", ver()));
            sincronizar(",",";", "fim", "programa", "inicio");
            if (igual(ver().getLexema(), ";", ","))
                const_decl2();
        } 
    }
    // ','id'<<'<Literal><Const_Decl2> | ';'
    private void const_decl2() throws EndTokensException{
        if (ver().getLexema().equals(",")){
            consumir();
            if(ver().getTipo().equals("identificador")){
                consumir();
                if (ver().getLexema().equals("<<")){
                    consumir();     
                    if(isLiteral()){
                        consumir();
                        const_decl2();
                    }else{
                        //panico - valor literal
                        erros.add(new Erro("valor literal", ver()));
                        sincronizar(",", ";", "programa", "inicio", "fim");
                        if (igual(ver().getLexema(), ";", ","))
                            const_decl2();
                    }
                }else{
                    //panico - <<
                    erros.add(new Erro("<<", ver()));
                    sincronizar(",",";", "fim", "programa", "inicio", "caractere", "cadeia", "numero","verdadeiro", "falso");
                    if (igual(ver().getLexema(), ";", ","))
                        const_decl2();
                    else if (igual(ver().getLexema(),"verdadeiro", "falso")||igual(ver().getTipo(), "caractere", "cadeia", "numero")){
                        consumir();
                        const_decl2();
                    }
                }
            }else{
                //panico - id
                erros.add(new Erro("identificador", ver()));
                sincronizar(",",";", "fim", "programa", "inicio");
                if (igual(ver().getLexema(), ";", ","))
                    const_decl2();
            }            
        }else if(ver().getLexema().equals(";")){
            consumir();
        }else{
            //panico - ou ;        
            sincronizar(",", "identificador", ";", "fim", "programa", "inicio", "inteiro", "real", "booleano", "caractere", "cadeia");
            if(igual(ver().getLexema(), "identificador", ","))
                erros.add(new Erro(",",ver()));
            else
                erros.add(new Erro(";", ver()));
            if (igual(ver().getLexema(), ";", ","))
                const_decl2();
        }
    }
    
    ////////////////////////    Bloco      /////////////////////////////
    
    //'inicio'<Corpo_Bloco>'fim'
    private void bloco() throws EndTokensException{
        if(ver().getLexema().equals("inicio")){
            consumir();
            corpo_bloco();
        }else{
            //panico -inicio
            erros.add(new Erro("inicio", ver()));
            sincronizar("inicio","var","inteiro", "real", "booleano", "caractere", "cadeia",
                    "escreva", "leia", "se", "enquanto", "identificador", "fim", "(");
            if(ver().getLexema().equals("inicio"))
                consumir();
            corpo_bloco();
        }
        if(ver().getLexema().equals("fim")){
            consumir();
        }else{
            //panico -fim
            erros.add(new Erro("fim", ver()));
            sincronizar("fim", "funcao", "inicio");
            if(ver().getLexema().equals("fim"))
                consumir();
        }
    }
    //<Var_Local><Corpo_Bloco> | <Comando><Corpo_Bloco> 
    // | <Chamada_Funcao>';'<Corpo_Bloco> | <Atribuicao><Corpo_Bloco> | <>
    private void corpo_bloco() throws EndTokensException{
        System.out.println("corpo_bloco");
        if (igual(ver().getLexema(),"fim", "funcao")){            
            return;
        }
        if (igual(ver().getLexema(), "var","inteiro", "real", "booleano", "caractere", "cadeia")){
            var_local();            
        } else if (igual(ver().getLexema(), "escreva", "leia", "se", "enquanto")){
            comando();
        } else if (ver().getTipo().equals("identificador") ){
            if (verLLX(1).getLexema().equals("(")){
                chamada_funcao();
                if(ver().getLexema().equals(";"))
                    consumir();
                else{
                    //panico - ;
                    //deixa passar somente ai corpo_bloco resolvera
                }
            }else{
                atribuicao();
            }
        } else if (ver().getLexema().equals("(")){
            //pode ser comandos ou chamada de funcao
            erros.add(new Erro("identificador|comando", ver()));
            sincronizar(";", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                    "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
                        
        } else{
            //sei nem que erro é que da aqui
            // caractere inesperado?!?!
            // panico para sincronizar com algo valido
            erros.add(new Erro("Algum inicio de instrucao valida", ver()));
            sincronizar(";", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                    "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
            
        }
        corpo_bloco();
    }
    ////////////////////////    variaveis locais    //////////////////////////
    
    //'var'<Tipo><Id_Vetor><Var_Local2>
    private void var_local() throws EndTokensException{
        if (ver().getLexema().equals("var")){
            consumir();
            if(isTipo()){
                consumir();
                id_vetor();
                var_local2();
            }else{
                //panico -tipo
                erros.add(new Erro("tipo", ver()));
                sincronizar(";",",", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                    "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
                if(ver().getLexema().equals(","))
                    var_local2();
                //else so deixa passar
            }
        }else{
            //panico -var
            erros.add(new Erro("var", ver()));
            //repetindo o que esta acima
            if(isTipo()){
                consumir();
                id_vetor();
                var_local2();
            }else{
                //panico -tipo
                erros.add(new Erro("tipo", ver()));
                sincronizar(";",",", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                    "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
                if(igual(ver().getLexema(),",", ";"))
                    var_local2();
                //else so deixa passar
            }
        }
    }
    
    //','<Id_Vetor><Var_Local2> | ';'
    private void var_local2() throws EndTokensException{
        if (ver().getLexema().equals(",")){
            consumir();
            id_vetor();
            var_local2();
        }else if(ver().getLexema().equals(";")){
            consumir();
        }else{
            //panico - , ou ;
            erros.add(new Erro(",|;", ver()));
            sincronizar(";",",", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                    "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
            if(igual(ver().getLexema(),",", ";"))
                var_local2();
                //else so deixa passar
        }
    }
    ////////////////////////    comandos    /////////////////////////////
    
    //<Escreva> | <Leia> | <Se> | <Enquanto>
    private void comando() throws EndTokensException{              
        if (ver().getLexema().equals("escreva")){
            escreva();
        }

        else if(ver().getLexema().equals("leia")){
            leia();
        }
        else if (ver().getLexema().equals("se")){
            se();
        }
        else if (ver().getLexema().equals("enquanto")){
            enquanto();
        }        
    }
    
    //'escreva''('<Escreva_Params>')'';'
    private void escreva() throws EndTokensException{
        if (ver().getLexema().equals("escreva")){               
            consumir();
            if(ver().getLexema().equals("(")){
                consumir();
                escreva_params();
                if(ver().getLexema().equals(")"))
                    consumir();
                else{
                    erros.add(new Erro(")", ver()));
                    sincronizar(";");
                    consumir();
                }
                if(ver().getLexema().equals(";"))
                    consumir();
                else{
                    erros.add(new Erro(";", ver()));
                    sincronizar("inteiro", "real", "booleano", "caractere", "cadeia", "identificador",
                            "inicio", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                            "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
                }
            }else{
                erros.add(new Erro("(", ver()));
                sincronizar(";");
                consumir();
            }
        }else{
            erros.add(new Erro("escreva", ver()));
            sincronizar("(", ";");     
            if (igual(ver().getLexema(), "(")){
                consumir();
                escreva_params();
            }
            else 
                consumir();
            //deixa passar                    
        }        
    }
    //<Exp_Aritmetica><Escreva_Param2> | caractere_t<Escreva_Param2> | cadeia_t<Escreva_Param2>
    private void escreva_params() throws EndTokensException{
        System.out.println(ver().getLexema()+" escreva_params");
        if(ver().getTipo().equals("cadeia")){
            consumir();
            escreva_params2();
        }//<Valor_Numerico> ::= '('<Exp_Aritmetica>')' | <Id_Vetor> | <Chamada_Funcao> | numero_t
        else if(ver().getTipo().equals("caractere")){
            consumir();
            escreva_params2();
        }else{
            exp_aritmetica(); 
            escreva_params2();
        }
    }

    //<Escreva_Param2> ::= ','<Escreva_Params> | <>
    private void escreva_params2() throws EndTokensException {
        if(ver().getLexema().equals(","))
            escreva_params();    
    }
    //'leia''('<Leia_Params>')'';'
    
    private void leia() throws EndTokensException{
        if (ver().getLexema().equals("leia")){               
            consumir();
            if(ver().getLexema().equals("(")){
                consumir();
                leia_params();
                if(ver().getLexema().equals(")"))
                    consumir();
                else{
                    erros.add(new Erro(")", ver()));
                    sincronizar(";");
                    consumir();
                }
                if(ver().getLexema().equals(";"))
                    consumir();
                else{
                    erros.add(new Erro(";", ver()));
                    sincronizar("inteiro", "real", "booleano", "caractere", "cadeia", "identificador",
                            "inicio", "var","inteiro", "real", "booleano", "caractere", "cadeia", 
                            "escreva", "leia", "se", "enquanto", "identificador", "(", "fim", "funcao");
                }
            }else{
                erros.add(new Erro("(", ver()));
                sincronizar(";");
                consumir();
            }
        }else{
            erros.add(new Erro("leia", ver()));
            sincronizar("(", ";");     
            if (ver().getLexema().equals("(")){
                consumir();
                escreva_params();
            }
            else
                consumir();
            //deixa passar                    
        }         
    }
    
    //<Id_Vetor><Leia_Param2>
    private void leia_params() throws EndTokensException {
        if(ver().getLexema().equals(")"))
            erros.add(new Erro(")", ver()));
        else{
            id_vetor();
            leia_params2();
        }
    }
    
    //<Leia_Param2> ::= ','<Leia_Params> | <>
    private void leia_params2() throws EndTokensException {
        if(ver().getLexema().equals(",")){
            consumir();
            leia_params();
        }     
    }
    
    //'se''('<Exp_Logica>')''entao'<Bloco><Senao>
    private void se() throws EndTokensException {
        if (ver().getLexema().equals("se")){
            consumir();
            if(ver().getLexema().equals("(")){
                consumir();
                exp_logica();
                if(ver().getLexema().equals(")")){
                    consumir();
                    if(ver().getLexema().equals("entao")){
                        consumir();
                        bloco();
                        senao();
                    }else{
                        erros.add(new Erro("entao", ver()));
                        sincronizar(";", "inicio");
                        bloco();
                        senao();
                    }
                }else{
                    erros.add(new Erro(")", ver()));
                    sincronizar("entao", ";", "inicio");
                    if(ver().getLexema().equals(")")){
                        consumir();
                        if(ver().getLexema().equals("entao")){
                            consumir();
                            bloco();
                            senao();
                        }else{
                            erros.add(new Erro("entao", ver()));
                            sincronizar(";", "inicio");
                            bloco();
                            senao();
                        }
                    }
